--- a/SkyLink.vcxproj
+++ b/SkyLink.vcxproj
@@ -111,7 +111,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>GLEW_STATIC;_DEBUG;_CONSOLE;IMGUI_IMPL_OPENGL_LOADER_GLEW;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Includes;C:\Company\GroundControl\SkyLinkv1\imgui\backends;C:\Company\GroundControl\SkyLinkv1\imgui</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Includes;C:\Company\GroundControl\SkyLinkv1\imgui_node</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -144,14 +144,13 @@
     <ClCompile Include="GrapDemo.cpp" />
     <ClCompile Include="GridCell.cpp" />
     <ClCompile Include="GridSystem.cpp" />
-    <ClCompile Include="imgui.cpp" />
-    <ClCompile Include="imgui_demo.cpp" />
-    <ClCompile Include="imgui_draw.cpp" />
-    <ClCompile Include="imgui_freetype.cpp" />
-    <ClCompile Include="imgui_impl_glfw.cpp" />
-    <ClCompile Include="imgui_impl_opengl3.cpp" />
-    <ClCompile Include="imgui_tables.cpp" />
-    <ClCompile Include="imgui_widgets.cpp" />
+    <ClCompile Include="imgui_node\imgui.cpp" />
+    <ClCompile Include="imgui_node\imgui_demo.cpp" />
+    <ClCompile Include="imgui_node\imgui_draw.cpp" />
+    <ClCompile Include="imgui_node\imgui_impl_glfw.cpp" />
+    <ClCompile Include="imgui_node\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="imgui_node\imgui_tables.cpp" />
+    <ClCompile Include="imgui_node\imgui_widgets.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Model.cpp" />
@@ -166,16 +165,15 @@
     <ClInclude Include="DataProvider.h" />
     <ClInclude Include="GridCell.h" />
     <ClInclude Include="GridSystem.h" />
-    <ClInclude Include="imconfig.h" />
-    <ClInclude Include="imgui.h" />
-    <ClInclude Include="imgui_freetype.h" />
-    <ClInclude Include="imgui_impl_glfw.h" />
-    <ClInclude Include="imgui_impl_opengl3.h" />
-    <ClInclude Include="imgui_impl_opengl3_loader.h" />
-    <ClInclude Include="imgui_internal.h" />
-    <ClInclude Include="imstb_rectpack.h" />
-    <ClInclude Include="imstb_textedit.h" />
-    <ClInclude Include="imstb_truetype.h" />
+    <ClInclude Include="imgui_node\imconfig.h" />
+    <ClInclude Include="imgui_node\imgui.h" />
+    <ClInclude Include="imgui_node\imgui_impl_glfw.h" />
+    <ClInclude Include="imgui_node\imgui_impl_opengl3.h" />
+    <ClInclude Include="imgui_node\imgui_impl_opengl3_loader.h" />
+    <ClInclude Include="imgui_node\imgui_internal.h" />
+    <ClInclude Include="imgui_node\imstb_rectpack.h" />
+    <ClInclude Include="imgui_node\imstb_textedit.h" />
+    <ClInclude Include="imgui_node\imstb_truetype.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="ModelLoader.h" />
@@ -187,6 +185,9 @@
   <ItemGroup>
     <None Include="fragment_shader.glsl" />
     <None Include="vertex_shader.glsl" />
+  </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="imgui_node\imgui.natvis" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
