--- a/SkyLink.vcxproj
+++ b/SkyLink.vcxproj
@@ -111,14 +111,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>GLEW_STATIC;_DEBUG;_CONSOLE;IMGUI_IMPL_OPENGL_LOADER_GLEW;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Includes;C:\Company\GroundControl\SkyLinkv1\imgui_node</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Includes;C:\Company\GroundControl\SkyLinkv1\imgui_node;C:\Company\GroundControlD\imgui-node-editor;C:\Company\GroundControlD\imgui-node-editor\examples\application\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)Libraries;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;glew32s.lib;freetype.lib;assimp-vc143-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;glew32s.lib;freetype.lib;assimp-vc143-mtd.lib;C:\Company\GroundControlD\imgui-node-editor\build\external\imgui\Debug\imgui.lib;C:\Company\GroundControlD\imgui-node-editor\build\canvas-example\Debug\imgui_node_editor.lib;C:\Company\GroundControlD\imgui-node-editor\build\application\Debug\application.lib;d3d11.lib;d3dcompiler.lib;C:\Company\GroundControlD\imgui-node-editor\external\DXSDK\lib\x64\d3dx11d.lib;C:\Company\GroundControlD\imgui-node-editor\build\application\Debug\dxerr.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -144,6 +144,8 @@
     <ClCompile Include="GrapDemo.cpp" />
     <ClCompile Include="GridCell.cpp" />
     <ClCompile Include="GridSystem.cpp" />
+    <ClCompile Include="imgui_node\blueprints-example.cpp" />
+    <ClCompile Include="imgui_node\entry_point.cpp" />
     <ClCompile Include="imgui_node\imgui.cpp" />
     <ClCompile Include="imgui_node\imgui_demo.cpp" />
     <ClCompile Include="imgui_node\imgui_draw.cpp" />
@@ -151,6 +153,9 @@
     <ClCompile Include="imgui_node\imgui_impl_opengl3.cpp" />
     <ClCompile Include="imgui_node\imgui_tables.cpp" />
     <ClCompile Include="imgui_node\imgui_widgets.cpp" />
+    <ClCompile Include="imgui_node\utilities\builders.cpp" />
+    <ClCompile Include="imgui_node\utilities\drawing.cpp" />
+    <ClCompile Include="imgui_node\utilities\widgets.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Model.cpp" />
@@ -167,6 +172,7 @@
     <ClInclude Include="GridSystem.h" />
     <ClInclude Include="imgui_node\imconfig.h" />
     <ClInclude Include="imgui_node\imgui.h" />
+    <ClInclude Include="imgui_node\imgui_extra_keys.h" />
     <ClInclude Include="imgui_node\imgui_impl_glfw.h" />
     <ClInclude Include="imgui_node\imgui_impl_opengl3.h" />
     <ClInclude Include="imgui_node\imgui_impl_opengl3_loader.h" />
@@ -174,6 +180,11 @@
     <ClInclude Include="imgui_node\imstb_rectpack.h" />
     <ClInclude Include="imgui_node\imstb_textedit.h" />
     <ClInclude Include="imgui_node\imstb_truetype.h" />
+    <ClInclude Include="imgui_node\platform.h" />
+    <ClInclude Include="imgui_node\renderer.h" />
+    <ClInclude Include="imgui_node\utilities\builders.h" />
+    <ClInclude Include="imgui_node\utilities\drawing.h" />
+    <ClInclude Include="imgui_node\utilities\widgets.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="ModelLoader.h" />
@@ -184,10 +195,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="fragment_shader.glsl" />
+    <None Include="imgui_node\config.h.in" />
     <None Include="vertex_shader.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="imgui_node\imgui.natvis" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="imgui_node\CMakeLists.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
